@@ -61,6 +61,7 @@ _("\n"
 "  Arrow keys        Paint Mode - Change colour A or B\n"
 "  Arrow keys        Selection Mode - Nudge selection box or paste box by one pixel\n"
 "  Shift+Arrow keys  Nudge selection box or paste box by x pixels - x is defined by the Preferences window\n"
+"  Ctrl+Arrows       Move layer or resize selection box\n"
 "\n"
 "  Delete            Crop image to selection\n"
 "  Insert            Transform colours - i.e. Brightness, Contrast, Saturation, Posterize, Gamma\n"
