@@ -17,6 +17,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* Undo now less wasteful of memory when adjusting the palette
 	* Major rewrite of back end code to improve performance
 	* Colour A/B editor now uses GTK+ colour dialog
+	* Ctrl+Arrows resizes selection area
 	* Most documentation has been removed from the F1 help and is now in HTML form
 	* HTML documentation available as a separate download package
 	* mtPaint mailing lists set up - http://sourceforge.net/mail/?group_id=155874
